--- a/src/main/resources/data.conf
+++ b/src/main/resources/data.conf
@@ -21,3 +21,8 @@ messages{
     wrongDateOrder = "Кінцева дата повинна бути більшою за початкову"
   }
 }
+search_input{
+faculty = "Інститут інформаційних технологій"
+description = "факультет справжніх"
+invalid = "#@&$%^"
+}
