--- a/src/main/resources/data.conf
+++ b/src/main/resources/data.conf
@@ -21,7 +21,7 @@ messages{
     wrongDateOrder = "Кінцева дата повинна бути більшою за початкову"
   }
 }
-search_input{
+searchInput{
 faculty = "Інститут інформаційних технологій"
 description = "факультет справжніх"
 invalid = "#@&$%^"
