--- a/src/main/resources/data.conf
+++ b/src/main/resources/data.conf
@@ -29,3 +29,18 @@ messages {
     wrongDateOrder = "Кінцева дата повинна бути більшою за початкову"
   }
 }
+fieldsInAddingForms{
+   faculties{
+   facultyName = "faculty_name"
+   facultyDescription = "faculty_description"
+   }
+   subjects{
+   subjectName = "subject_name"
+   subjectDescription = "subject_description"
+   }
+}
+addingFormsTemplates{
+input = "//input[@formcontrolname='%s']"
+textArea = "//textarea[@formcontrolname='%s']"
+matSelect = "//matselect[@formcontrolname='%s']"
+}
