--- a/src/main/resources/data.conf
+++ b/src/main/resources/data.conf
@@ -24,3 +24,11 @@ searchInput {
   description = "факультет справжніх"
   invalid = "#@&$%^"
 }
+api{
+  baseUri = "https://dtapi.if.ua/api"
+  basePathes{
+    login = "/login"
+    isLogged = "/login/isLogged"
+    logout = "/login/logout"
+  }
+}
