--- a/src/main/resources/data.conf
+++ b/src/main/resources/data.conf
@@ -26,4 +26,7 @@ api{
     isLogged = "/login/isLogged"
     logout = "/login/logout"
   }
+  entityPathes{
+    getRecords = "/%s/getRecords"
+ }
 }
