--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,11 @@
             <version>${slf4j.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.10</version>
+        </dependency>
     </dependencies>
 
 </project>
