--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <slf4j.version>1.7.32</slf4j.version>
         <joda.time.version>2.10</joda.time.version>
         <gson.version>2.9.0</gson.version>
+        <json.schema.validator.version>5.1.0</json.schema.validator.version>
 
         <suiteXmlFile>alltestssuite.xml</suiteXmlFile>
     </properties>
@@ -153,6 +154,11 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>${gson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>json-schema-validator</artifactId>
+            <version>${json.schema.validator.version}</version>
         </dependency>
     </dependencies>
 
