--- a/src/main/resources/data.conf
+++ b/src/main/resources/data.conf
@@ -22,16 +22,17 @@ messages {
 }
 api{
   baseUri = "https://dtapi.if.ua/api"
-  basePathes{
+  basePaths{
     login = "/login"
     isLogged = "/login/isLogged"
     logout = "/login/logout"
   }
-  entityPathes{
-    getRecords = "/%s/getRecords"
-    insertData = "/%s/insertData"
-    update = "/%s/update/%s"
-    delete = "/%s/del/%s"
+  entityPaths{
+    getRecords = "/{Entity}/getRecords"
+    getRecord = "/{Entity}/getRecords/%s"
+    insertData = "/{Entity}/insertData"
+    update = "/{Entity}/update/%s"
+    delete = "/{Entity}/del/%s"
   }
 }
 testData{
